2002-06-19  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/fvwm.c (Done):
	(StartupStuff):
	* fvwm/functions.c (functions_is_complex_function):
	* fvwm/builtins.c (CMD_DestroyFunc):
	(CMD_AddToFunc):
	(CMD_Plus):
	moved functions to functions.c
	general cleanup

	* fvwm/functable.c:
	* fvwm/functable.h:
	* fvwm/functions.h:
	* fvwm/commands.h:
	* fvwm/functions.c:
	moved some types and functions to other/new files

	* fvwm/functions.c:
	* fvwm/expand.c (expand_vars_extended):
	(expand_vars):
	functions moved to new file

	* fvwm/functions.c:
	reindented file

2002-06-18  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/events.c (CoerceEnterNotifyOnCurrentWindow):
	fixed colorurmap focus problem

	* **/*.[ch]:
	tabified all files and removed all trailing spaces

	* fvwm/move_resize.c (move_window_doit):
	* fvwm/virtual.c (CMD_MoveToDesk):
	MoveToPage and MoveToDesk no longer unstick windows

2002-06-17  Mikhael Goikhman  <migo@homemail.com>

	* INSTALL.fvwm:
	small improvements

	* configure.in:
	reworded some names of supported features

2002-06-17  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/update.c (apply_window_updates):
	* fvwm/session.c (MatchWinToSM):
	* fvwm/add_window.c (setup_window_structure):
	* fvwm/windowshade.c (CMD_WindowShade):
	* fvwm/window_flags.h:
	fixed a problem w/ shaded windows changind the title direction

	* fvwm/geometry.c (get_shaded_geometry):
	fixed shading window to 0 width or height

	* fvwm/add_window.c (AddWindow):
	fixed a memory leak and an initial window placement bug

2002-06-15  Mikhael Goikhman  <migo@homemail.com>

	* configure.in:
	minor improvements in output, added bin/fvwm-perllib

2002-06-12  Mikhael Goikhman  <migo@homemail.com>

	* fvwm/menustyle.c (CMD_CopyMenuStyle):
	fixed copying PopupOffset values in CopyMenuStyle

	* NEWS:
	Copied 2.4.8 NEWS

2002-06-10  Mikhael Goikhman  <migo@homemail.com>

	* libs/Strings.[ch]:
	added CopyStringWithQuotes, not perfect, but works for now
