@@ -1169,11 +1169,14 @@ void find_func_type(char *action, short *func_type, unsigned char *flags)
 
 	if (action)
 	{
-		while (*endtok&&!isspace((unsigned char)*endtok))++endtok;
+		while (*endtok && !isspace((unsigned char)*endtok))
+                {
+                        ++endtok;
+                }
 		len = endtok - action;
 		j=0;
 		matched = FALSE;
-		while (!matched && (mlen = strlen(func_table[j].keyword) > 0))
+		while (!matched && (mlen = strlen(func_table[j].keyword)) > 0)
 		{
 			if (mlen == len &&
 			    strncasecmp(action,func_table[j].keyword,mlen) ==
