@@ -1,5 +1,8 @@
 2002-06-19  Dominik Vogt  <dominik.vogt@gmx.de>
 
+	* fvwm/functions.c (find_func_type):
+	fixed bug i introduced w/ last commit
+
 	* fvwm/fvwm.c (Done):
 	(StartupStuff):
 	* fvwm/functions.c (functions_is_complex_function):
